--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
     "prettier-webpack-plugin": "^1.2.0",
     "sass-loader": "^12.1.0",
